# ipc-socket-bridge

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
configs/: bridge_config.cfg
docs/: architecture.md  performance.md  troubleshooting.md
examples/: CMakeLists.txt  basic_bridge.cpp  ipc_client_sender.cpp  tcp_client_receiver.cpp
include/bridge/: Bridge.hpp  BridgeConfig.hpp  IPCListener.hpp  Logger.hpp  MessageFrame.hpp  MessageRouter.hpp  Metrics.hpp  SignalHandler.hpp  TCPServer.hpp  ThreadSafeQueue.hpp
scripts/: build.sh  run_tests.sh  run_valgrind.sh  send_test_message.sh
src/bridge/: Bridge.cpp  BridgeConfig.cpp  IPCListener.cpp  Logger.cpp  MessageFrame.cpp  MessageRouter.cpp  Metrics.cpp  SignalHandler.cpp  TCPServer.cpp  main.cpp
tests/: CMakeLists.txt  test_integration.cpp  test_ipc_listener.cpp  test_message_frame.cpp  test_message_router.cpp  test_metrics.cpp  test_tcp_server.cpp  test_thread_safe_queue.cpp
